--- a/style.css
+++ b/style.css
@@ -1,69 +1,164 @@
-header {
-	text-align: center; 
-	color: black;
-	}
-body {
-	background: url(http://bigbackground.com/wp-content/uploads/2013/07/cool-simple-backgrounds.jpg); 
-	background-size: cover;
-}
-.title {
-	text-align: center;
+nav {
+	font-weight: bold; 
+	font-size: 20px;
+	background: #000;
+	color: #000;
+	height: 50px;
+	text-align: right;
+	margin: 0px;
 }
 
-h1 {
-	margin-top: 15px;
+nav img#icon { 
+	float:left;
+	position: relative;
+	left: 5px;
+}
+nav ul li { 
+	display: inline;
+	list-style-type: none; 	
+}
+
+a.navpad {
+	padding: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
+	color: #FFF; 
+}
+
+div#TRpic {
+	float: right;
+	border: 3px inlet black;
+	border-radius: 20px; 
+
+}
+
+figcaption {
+	font-weight: bold;
+}
+
+img#knob { 
+	position: relative;
+	right: -45px; 
+}
+
+#welcome {
+	position: relative;
+	z-index: 0; 
+	right: -40px;
+}
+
+.intro {
+	position: relative;
+	left: 35px;
+}
+
+img#skydive { 
+	opacity: .85;
+	z-index: -1; 
+	max-width: 35%;
+	max-height: 30%; 
+	position: relative;
+	left: 42%;
+	top: 15px;
+	margin-bottom: 20px; 
+}
+article#background {
+	/*background: url(http://i.imgur.com/ONb24kA.jpg), #F2F2F2;*/
+	background: #A4A4A4;
+	background-repeat: no-repeat;
+	background-position: center; 
+	text-align: center; 
+}
+
+.bkgleft .bkgcenter1 {
+	text-align: center; 
+}
+
+.myLife {
+	list-style-type: none; 	
+	text-align: center; 
+}
+
+article#exp {
+	text-align: right justify;
+
+}
+
+.expformat {
+	text-align: left;
+	position: relative;
+	left: 200px;
+}
+
+article#future { 
+	background: #A4A4A4;
+	border: 0px; 
+}
+
+.futformat {
+	text-align: right; 
+	margin-right: 230px; 
+}
+
+div#contact {
+	border: 4px inset black;
+	max-width: 250px;
+	text-align: center; 
+	border-radius: 20px;
+	margin-top: 4px;
+}
+
+img#profile {
+	margin-top: 4px; 
+}
+
+html {
+	background: #EEEEEE;
+}
+
+body {
+	margin-right: 50px;
+	margin-left: 50px; 
+}
+
+h1 { 
+	font-family: 'PT Sans', sans-serif; 
 }
 
 h2 {
-	margin-top: 70px;
+	font-family: 'Special Elite', cursive;
 }
 
 h3 {
-	text-align: center justify;
+	font-family: 'Coming Soon', cursive; 
+	padding: 0 auto;
+	margin: 0 auto;
+}
+
+h4 {
+	text-align: center;
+	padding: 3px;
+	margin-bottom: 0;
 }
 
 p {
-	text-align: center justify;
-}
-
-.bridge {
-	margin-top: -50px;
-	float: right;
-	text-align: center; 
-	padding-top: 15px; 
-}
-
-.skydive {
-	top: 50%;
-	left: 50%;
-	margin-top: -50px;
-}
-
-.rock {
-	max-width: 120px;
-	max-height: 200px;
-	text-align: center; 
-	margin-top: 10px;
-	margin-left: 150px;
-}
-
-.background {
-	padding: 10px 20px 10px 20px;
-	margin: 10px 50px 20px 100px;
-}
-
-.contact {
-	margin: 20px 0 20px 100px;
-	border: solid;
-	max-width: 200px; 
-	padding: 2px 5px 2px 5px;
 	text-align: center;
+}
+
+footer {
+	height: 50px;
+	background: black; 
+	margin-top: 250px; 
 }
 
 #carousel {
 	width: 480px;
 	margin: 0 auto;
 	overflow: hidden; /* to hide images apart from first */ 
+	float: right;
+	position: relative;
+	top: -350px;
+	right: 20%;
 }
 	#carousel ul{
 		width: 1920px;
@@ -79,10 +174,9 @@ p {
 		float: left;
 		background: black;
 		margin: 10px auto;
+		border-radius: 10px;
 	}
 	#carousel ul li img{
 		max-height: 100%;
 		max-width: 100%;
 }
-
-
